objects/MPW_CE_Turnkey_QueueIDName__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCEUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCEUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTurnkeyUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTurnkeyUser</label>
        <type>Checkbox</type>
    </fields>
    <label>MPW_CE_Turnkey_QueueIDName</label>
</CustomObject>